--- a/src/css/render-functions.css
+++ b/src/css/render-functions.css
@@ -1,4 +1,5 @@
 /* ==== LOADER ==== */
+.load-more.hidden,
 .loader.hidden {
   display: none;
 }
@@ -105,7 +106,7 @@
   border-color: #4e75ff;
 }
 
-.form button {
+.btn {
   width: 150px;
   height: 40px;
   padding: 8px 16px;
@@ -118,8 +119,19 @@
   transition: background-color 0.3s ease;
 }
 
-.form button:hover {
+.btn:hover {
   background-color: #6c8cff;
+}
+
+.btn:disabled {
+  color: #989898;
+  background-color: #cfcfcf;
+  cursor: not-allowed;
+}
+
+.load-more {
+  display: block;
+  margin: 32px auto 44px;
 }
 
 /* ==== GALLERY ==== */
@@ -131,7 +143,6 @@
   justify-content: center;
 }
 
-/* 1 column on mobile by default */
 .gallery-item {
   flex: 0 1 100%;
   display: flex;
