--- a/src/css/render-functions.css
+++ b/src/css/render-functions.css
@@ -147,6 +147,8 @@
   flex: 0 1 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
+  overflow: hidden;
   border: 1px solid #808080;
   border-radius: 4px;
   background-color: #fff;
@@ -182,7 +184,7 @@
 }
 
 .gallery-image {
-  width: 100%;
+  width: 360px;
   height: 200px;
   object-fit: cover;
   cursor: zoom-in;
@@ -190,12 +192,19 @@
 
 /* ==== INFO PANEL ==== */
 .info {
+  position: absolute;
+  width: 100%;
+  height: 48px;
+  bottom: 0;
+  left: 0;
   display: flex;
   justify-content: space-around;
+  align-items: center;
   padding: 12px;
   background-color: #f4f4f4;
   font-size: 14px;
   text-align: center;
+  box-sizing: border-box;
 }
 
 .info-item {
@@ -208,6 +217,12 @@
 .info-item h4 {
   font-size: 16px;
   margin: 0;
+}
+
+.info-item .icon {
+  fill: #6c8cff;
+  width: 18px;
+  height: 18px;
 }
 
 /* ==== LIGHTBOX ==== */
