--- a/src/css/render-functions.css
+++ b/src/css/render-functions.css
@@ -5,88 +5,93 @@
 }
 
 .loader {
-  position: fixed;
-  top: 50%;
+  width: 16px;
+  height: 16px;
+  position: absolute;
   left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1000;
-  width: 164px;
-  height: 164px;
+  top: calc(100% + 16px);
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 50%;
+  color: #808080;
+  background: currentColor;
+  box-shadow: 32px 0, -32px 0, 64px 0;
 }
-.loader::before,
+
 .loader::after {
   content: '';
   position: absolute;
-  width: 80px;
-  height: 40px;
-  background-color: #808080;
-  left: 50%;
-  top: 50%;
-  animation: rotate 1s ease-in infinite;
-  border-radius: 20%;
-}
-.loader::after {
-  width: 14px;
-  height: 28px;
-  background-color: #4e75ff;
-  animation: rotate 1s ease-in infinite, moveY 1s ease-in infinite;
-  border-radius: 20%;
+  left: -32px;
+  top: 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 10px;
+  background: #4e75ff;
+  animation: move 3s linear infinite alternate;
 }
 
-@keyframes moveY {
+@keyframes move {
   0%,
-  100% {
-    top: 10%;
+  5% {
+    left: -32px;
+    width: 16px;
+  }
+  15%,
+  20% {
+    left: -32px;
+    width: 48px;
+  }
+  30%,
+  35% {
+    left: 0px;
+    width: 16px;
   }
   45%,
-  55% {
-    top: 59%;
+  50% {
+    left: 0px;
+    width: 48px;
   }
-  60% {
-    top: 40%;
+  60%,
+  65% {
+    left: 32px;
+    width: 16px;
   }
-}
-@keyframes rotate {
-  0% {
-    transform: translate(-50%, -100%) rotate(0deg) scale(1, 1);
+
+  75%,
+  80% {
+    left: 32px;
+    width: 48px;
   }
-  25% {
-    transform: translate(-50%, 0%) rotate(180deg) scale(1, 1);
-  }
-  45%,
-  55% {
-    transform: translate(-50%, 100%) rotate(180deg) scale(3, 0.5);
-  }
-  60% {
-    transform: translate(-50%, 100%) rotate(180deg) scale(1, 1);
-  }
-  75% {
-    transform: translate(-50%, 0%) rotate(270deg) scale(1, 1);
-  }
+  95%,
   100% {
-    transform: translate(-50%, -100%) rotate(360deg) scale(1, 1);
+    left: 64px;
+    width: 16px;
   }
 }
 
 /* ==== FORM ==== */
 .form {
+  position: relative;
+}
+
+.form-wrapper {
   display: flex;
   flex-direction: column;
   gap: 12px;
   align-items: center;
   justify-content: center;
-  margin: 24px auto 12px;
+  margin: 36px auto 32px;
   padding: 0 16px;
   max-width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  .form {
+  .form-wrapper {
     flex-direction: row;
   }
 }
 
-.form input {
+.form-wrapper input {
   width: 100%;
   max-width: 280px;
   height: 40px;
@@ -98,11 +103,11 @@
   outline: none;
 }
 
-.form input:hover {
+.form-wrapper input:hover {
   border-color: #000000;
 }
 
-.form input:focus {
+.form-wrapper input:focus {
   border-color: #4e75ff;
 }
 
